apps/home-gpt/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: home-gpt
  labels:
    pod-security.kubernetes.io/enforce: privileged
---
