apps/home-gpt/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: home-gpt
spec:
  replicas: 1
  selector:
    matchLabels:
      app: home-gpt
  template:
    metadata:
      labels:
        app: home-gpt
    spec:
      containers:
      - name: home-gpt
        image: ghcr.io/bensonphillipsiv/homegpt:latest
        imagePullPolicy: Always
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/hostname
                operator: In
                values: ["b1"]
---
apiVersion: v1
kind: Service
metadata:
  name: home-gpt
  labels:
    app: home-gpt
spec:
  type: LoadBalancer
  selector:
    app: home-gpt
  externalTrafficPolicy: Cluster
  loadBalancerIP: 192.168.1.121
  sessionAffinity: None
  ports:
    - port: 8765
      targetPort: 8765
      protocol: TCP
      name: websocket
---
